prevent image stretching

--- a/src/app/pages/about-college/about-college.component.scss
+++ b/src/app/pages/about-college/about-college.component.scss
@@ -4,6 +4,11 @@
   float: left;
 }
 
+.card-img-top {
+  background-size: cover;
+  background-position: center;
+}
+
 .imagemegyeri {
   padding: 2%;
   float: left;
